# WfMarketScraper

./: .gitignore  CMakeLists.txt
include/: CurlReq.hpp  Sorting.hpp
src/: CurlReq.cpp  Sorting.cpp  main.cpp
vendors/: data.json
